Implemented Smart HTTP. Clone and push works fine!

--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -11,6 +11,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="GitServer.GitRoot" value="D:\GitRoot" />
   </appSettings>
 
   <system.web>
