Added some instructions.

--- a/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
+++ b/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SmartHttpController.cs" />
     <Compile Include="ModelBinders\SmartHttpPathBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
