--- a/src/devplex.GitServer.Web/Views/Web.config
+++ b/src/devplex.GitServer.Web/Views/Web.config
@@ -16,6 +16,10 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.Optimization" />
+        <add namespace="devplex.GitServer.Core.Models" />
+        <add namespace="devplex.GitServer.Mvc.FrameworkExtensions" />
+        <add namespace="devplex.GitServer.Mvc.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
