F: Added Help, theme and settings for SSL

--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -11,7 +11,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
+    <add key="GitServer.UseSSL" value="true" />
     <add key="GitServer.GitRoot" value="D:\GitRoot" />
   </appSettings>
 
