--- a/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
+++ b/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
@@ -120,6 +120,7 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\font\fontawesome-webfont.svg" />
+    <Content Include="Content\gitignore.txt" />
     <Content Include="Content\images\devplex-git-icon.png" />
     <Content Include="Content\images\devplex-git-logo.png" />
     <Content Include="Content\style-devplex.css" />
