--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -16,9 +16,9 @@
   </appSettings>
 
   <system.web>
-    
+
     <httpRuntime targetFramework="4.5" />
-    
+
     <compilation debug="true" targetFramework="4.5" />
 
     <pages>
@@ -31,11 +31,13 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    
+    <identity impersonate="true" />
   </system.web>
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-     
+
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
