--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -68,9 +68,10 @@
     <Compile Include="FrameworkExtensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="Git\RepositoryBrowser.cs" />
     <Compile Include="IO\DirectoryCrawler.cs" />
-    <Compile Include="Models\BrowseDirectory.cs" />
+    <Compile Include="Models\NamespaceDirectory.cs" />
     <Compile Include="Models\DirectoryTree.cs" />
-    <Compile Include="Models\DirectoryType.cs" />
+    <Compile Include="Models\ITreeDirectory.cs" />
+    <Compile Include="Models\RepositoryDirectory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\TransportPackage.cs" />
   </ItemGroup>
