--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FrameworkExtensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="Git\RepositoryBrowser.cs" />
     <Compile Include="IO\DirectoryCrawler.cs" />
+    <Compile Include="Models\CommitMessage.cs" />
     <Compile Include="Models\NamespaceDirectory.cs" />
     <Compile Include="Models\DirectoryTree.cs" />
     <Compile Include="Models\ITreeDirectory.cs" />
@@ -78,6 +79,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
