--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -37,8 +37,18 @@
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-
     <modules runAllManagedModulesForAllRequests="true" />
+
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <clear />
+        </hiddenSegments>
+        <fileExtensions>
+          <clear />
+        </fileExtensions>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
