--- a/src/devplex.GitServer.Web/packages.config
+++ b/src/devplex.GitServer.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="normalize.css" version="2.1.2" targetFramework="net45" />
   <package id="Prettify" version="3.3.04.2013" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
