--- a/src/devplex.GitServer.Web/packages.config
+++ b/src/devplex.GitServer.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FontAwesome" version="3.1.1" targetFramework="net45" />
+  <package id="jQuery" version="2.0.2" targetFramework="net45" />
+  <package id="jQuery.TimeAgo" version="1.1.01" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
