--- a/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
+++ b/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\Prettify\Themes\sunburst.css" />
     <Content Include="Content\styles.css" />
     <Content Include="Global.asax" />
+    <None Include="Properties\PublishProfiles\FS.pubxml" />
     <None Include="Scripts\jquery-2.0.2.intellisense.js" />
     <Content Include="Scripts\devplex.gitserver.js" />
     <Content Include="Scripts\jquery-2.0.2.js" />
