F: Added zip download.

--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\ITreeObject.cs" />
     <Compile Include="Models\RepositoryDirectory.cs" />
     <Compile Include="Models\TreeFile.cs" />
+    <Compile Include="Models\ZipArchive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\TransportPackage.cs" />
   </ItemGroup>
