R: Simplified path handling in RepositoryController.

--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -68,14 +68,15 @@
     <Compile Include="FrameworkExtensions\HttpRequestBaseExtensions.cs" />
     <Compile Include="FrameworkExtensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="FrameworkExtensions\StringExtensions.cs" />
-    <Compile Include="Git\RepositoryBrowser.cs" />
+    <Compile Include="Git\GitRepository.cs" />
+    <Compile Include="Git\IGitRepository.cs" />
     <Compile Include="IO\DirectoryCrawler.cs" />
-    <Compile Include="Models\BlobDetails.cs" />
-    <Compile Include="Models\CommitMessage.cs" />
+    <Compile Include="Models\RepositoryBlob.cs" />
+    <Compile Include="Models\GitCommitMessage.cs" />
     <Compile Include="Models\RepositoryPath.cs" />
     <Compile Include="Models\TreeDirectory.cs" />
     <Compile Include="Models\NamespaceDirectory.cs" />
-    <Compile Include="Models\DirectoryTree.cs" />
+    <Compile Include="Models\RepositoryTree.cs" />
     <Compile Include="Models\ITreeObject.cs" />
     <Compile Include="Models\RepositoryDirectory.cs" />
     <Compile Include="Models\TreeFile.cs" />
