R: Moved Is* methods.

--- a/src/devplex.GitServer.Web/Views/Web.config
+++ b/src/devplex.GitServer.Web/Views/Web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
+        <add namespace="devplex.GitServer.Core.Extensions"/>
         <add namespace="devplex.GitServer.Core.Models" />
         <add namespace="devplex.GitServer.Mvc.FrameworkExtensions" />
         <add namespace="devplex.GitServer.Mvc.ViewModels" />
