--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="Extensions\RepositoryBlobExtensions.cs" />
     <Compile Include="Extensions\TreeExtensions.cs" />
     <Compile Include="FrameworkExtensions\HttpRequestBaseExtensions.cs" />
     <Compile Include="FrameworkExtensions\HttpResponseBaseExtensions.cs" />
