--- a/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
+++ b/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
@@ -82,6 +82,8 @@
     <Compile Include="FrameworkExtensions\UrlHelperExtensions.cs" />
     <Compile Include="ModelBinders\SmartHttpPathBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BaseTreeViewModel.cs" />
+    <Compile Include="ViewModels\RepositoryTreeViewModel.cs" />
     <Compile Include="ViewModels\RepositoryViewModel.cs" />
     <Compile Include="ViewModels\TreeViewModel.cs" />
   </ItemGroup>
