--- a/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
+++ b/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\font\fontawesome-webfont.svg" />
     <Content Include="Content\gitignore.txt" />
     <Content Include="Content\images\devplex-git-icon.png" />
+    <Content Include="Content\images\devplex-git-icon_30x30.png" />
     <Content Include="Content\images\devplex-git-logo.png" />
     <Content Include="Content\Prettify\prettify.css" />
     <Content Include="Content\Prettify\Themes\desert.css" />
@@ -132,6 +133,7 @@
     <Content Include="Content\styles.css" />
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\FS.pubxml" />
+    <Content Include="Scripts\devplex.gitserver.tree.js" />
     <Content Include="Scripts\devplex.gitserver.blob.js" />
     <Content Include="Scripts\foundation\foundation.alerts.js" />
     <Content Include="Scripts\foundation\foundation.clearing.js" />
@@ -148,6 +150,7 @@
     <Content Include="Scripts\foundation\foundation.section.js" />
     <Content Include="Scripts\foundation\foundation.tooltips.js" />
     <Content Include="Scripts\foundation\foundation.topbar.js" />
+    <Content Include="Scripts\jquery.timeago.js" />
     <Content Include="Scripts\Prettify\lang-apollo.js" />
     <Content Include="Scripts\Prettify\lang-basic.js" />
     <Content Include="Scripts\Prettify\lang-clj.js" />
@@ -193,6 +196,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_TopBar.cshtml" />
     <Content Include="Scripts\devplex.gitserver.js" />
+    <Content Include="Views\Shared\_RepositoryNavigation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\devplex.GitServer.Core\devplex.GitServer.Core.csproj">
