--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -5,6 +5,10 @@
   -->
 
 <configuration>
+  <configSections>
+    <section name="devplex.GitServer" type="devplex.GitServer.Core.Configuration.GitServerSection, devplex.GitServer.Core" />
+  </configSections>
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -14,6 +18,25 @@
     <add key="GitServer.UseSSL" value="true" />
     <add key="GitServer.GitRoot" value="D:\GitRoot" />
   </appSettings>
+
+  <devplex.GitServer>
+    <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.RawViewer, devplex.GitServer.Mvc">
+      <viewer type="devplex.GitServer.Mvc.Viewers.MarkdownViewer, devplex.GitServer.Mvc">
+        <extensions>
+          <add extension=".md" />
+          <add extension=".markdown" />
+        </extensions>
+      </viewer>
+      <viewer type="devplex.GitServer.Mvc.Viewers.ImageViewer, devplex.GitServer.Mvc">
+        <extensions>
+          <add extension=".png" />
+          <add extension=".gif" />
+          <add extension=".jpg" />
+          <add extension=".jpeg" />
+        </extensions>
+      </viewer>
+    </viewers>
+  </devplex.GitServer>
 
   <system.web>
 
@@ -31,7 +54,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    
+
     <identity impersonate="true" />
   </system.web>
 
