--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,7 +65,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\IRepositoryObject.cs" />
+    <Compile Include="Common\IContentViewer.cs" />
+    <Compile Include="Configuration\GitServerSection.cs" />
     <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="Configuration\ViewerElementCollection.cs" />
     <Compile Include="Extensions\RepositoryBlobExtensions.cs" />
     <Compile Include="Extensions\TreeExtensions.cs" />
     <Compile Include="FrameworkExtensions\HttpRequestBaseExtensions.cs" />
