--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -15,11 +15,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="GitServer.UseSSL" value="true" />
-    <add key="GitServer.GitRoot" value="D:\GitRoot" />
   </appSettings>
 
-  <devplex.GitServer>
+  <devplex.GitServer repositoryPath="D:\GitRoot" useSsl="false">
     <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.RawViewer, devplex.GitServer.Mvc">
       <viewer type="devplex.GitServer.Mvc.Viewers.MarkdownViewer, devplex.GitServer.Mvc">
         <extensions>
@@ -36,6 +34,19 @@
         </extensions>
       </viewer>
     </viewers>
+    <binaries>
+      <add extension=".exe" />
+      <add extension=".dll" />
+      <add extension=".pdf" />
+      <add extension=".ppt" />
+      <add extension=".pptx" />
+      <add extension=".doc" />
+      <add extension=".docx" />
+      <add extension=".xls" />
+      <add extension=".xlsx" />
+      <add extension=".snk" />
+      <add extension=".ico" />
+    </binaries>
   </devplex.GitServer>
 
   <system.web>
