--- a/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
+++ b/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
@@ -88,9 +88,9 @@
     <Compile Include="Viewers\MarkdownViewer.cs" />
     <Compile Include="Viewers\RawViewer.cs" />
     <Compile Include="ViewModels\CommitHistoryViewModel.cs" />
+    <Compile Include="ViewModels\RepositoriesViewModel.cs" />
     <Compile Include="ViewModels\RepositoryTreeViewModel.cs" />
     <Compile Include="ViewModels\RepositoryViewModel.cs" />
-    <Compile Include="ViewModels\TreeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
