F: Prepared commit details.

--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -17,7 +17,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
-  <devplex.GitServer repositoryPath="D:\GitRoot" useSsl="false">
+  <devplex.GitServer repositoryPath="D:\GitRoot" useSsl="true">
     <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.RawViewer, devplex.GitServer.Mvc">
       <viewer type="devplex.GitServer.Mvc.Viewers.MarkdownViewer, devplex.GitServer.Mvc">
         <extensions>
