--- a/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
+++ b/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
@@ -133,8 +133,30 @@
     <Content Include="Content\styles.css" />
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\FS.pubxml" />
-    <Content Include="Scripts\devplex.gitserver.tree.js" />
-    <Content Include="Scripts\devplex.gitserver.blob.js" />
+    <Content Include="Scripts\gitserver\devplex.gitserver.blob.js">
+      <DependentUpon>devplex.gitserver.blob.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.blob.min.js">
+      <DependentUpon>devplex.gitserver.blob.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.js">
+      <DependentUpon>devplex.gitserver.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.min.js">
+      <DependentUpon>devplex.gitserver.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.repositories.js">
+      <DependentUpon>devplex.gitserver.repositories.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.repositories.min.js">
+      <DependentUpon>devplex.gitserver.repositories.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.tree.js">
+      <DependentUpon>devplex.gitserver.tree.coffee</DependentUpon>
+    </Content>
+    <Content Include="Scripts\gitserver\devplex.gitserver.tree.min.js">
+      <DependentUpon>devplex.gitserver.tree.coffee</DependentUpon>
+    </Content>
     <Content Include="Scripts\foundation\foundation.alerts.js" />
     <Content Include="Scripts\foundation\foundation.clearing.js" />
     <Content Include="Scripts\foundation\foundation.cookie.js" />
@@ -197,9 +219,12 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Shared\_TopBar.cshtml" />
-    <Content Include="Scripts\devplex.gitserver.js" />
     <Content Include="Views\Shared\_RepositoryNavigation.cshtml" />
     <Content Include="Views\Shared\_RepositoryTree.cshtml" />
+    <Content Include="Scripts\gitserver\devplex.gitserver.blob.coffee" />
+    <None Include="Scripts\gitserver\devplex.gitserver.coffee" />
+    <Content Include="Scripts\gitserver\devplex.gitserver.tree.coffee" />
+    <Content Include="Scripts\gitserver\devplex.gitserver.repositories.coffee" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\devplex.GitServer.Core\devplex.GitServer.Core.csproj">
