--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -51,7 +51,7 @@
 
   <system.web>
 
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="209715200" executionTimeout="7200" />
 
     <compilation debug="true" targetFramework="4.5" />
 
@@ -75,6 +75,7 @@
 
     <security>
       <requestFiltering>
+        <requestLimits maxAllowedContentLength="209715200" />
         <hiddenSegments>
           <clear />
         </hiddenSegments>
