--- a/src/devplex.GitServer.Web/Web.config
+++ b/src/devplex.GitServer.Web/Web.config
@@ -18,7 +18,7 @@
   </appSettings>
 
   <devplex.GitServer repositoryPath="D:\GitRoot" useSsl="true">
-    <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.RawViewer, devplex.GitServer.Mvc">
+    <viewers fallbackViewerType="devplex.GitServer.Mvc.Viewers.CodeViewer, devplex.GitServer.Mvc">
       <viewer type="devplex.GitServer.Mvc.Viewers.MarkdownViewer, devplex.GitServer.Mvc">
         <extensions>
           <add extension=".md" />
