--- a/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
+++ b/src/devplex.GitServer.Core/devplex.GitServer.Core.csproj
@@ -63,8 +63,7 @@
     <Compile Include="FrameworkExtensions\HttpRequestBaseExtensions.cs" />
     <Compile Include="FrameworkExtensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="FrameworkExtensions\StringExtensions.cs" />
-    <Compile Include="Git\GitRepository.cs" />
-    <Compile Include="Git\IGitRepository.cs" />
+    <Compile Include="Versioning\GitVersioningSystem.cs" />
     <Compile Include="IO\DirectoryCrawler.cs" />
     <Compile Include="Models\FileDiff.cs" />
     <Compile Include="Models\OrganizationRepository.cs" />
@@ -78,6 +77,7 @@
     <Compile Include="Models\TreeFile.cs" />
     <Compile Include="Models\ZipArchive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Versioning\IVersioningSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
