R: Worked on the help page

--- a/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
+++ b/src/devplex.GitServer.Mvc/devplex.GitServer.Mvc.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RepositoryController.cs" />
     <Compile Include="Controllers\SmartHttpController.cs" />
+    <Compile Include="Extensions\IdentityExtensions.cs" />
     <Compile Include="FrameworkExtensions\HtmlHelperExtensions.cs" />
     <Compile Include="FrameworkExtensions\UrlHelperExtensions.cs" />
     <Compile Include="ModelBinders\SmartHttpPathBinder.cs" />
